# tabor

./: .env.example  .gitignore  LICENSE  README.md  api.py  app.py  main.py  modal_app.py  pyproject.toml
agent/: __init__.py  graph.py  tools.py
web/: env.d.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: root.tsx
web/app/routes/: _index.tsx
web/public/: tailwind.css
