[project]
name = "tabor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-tavily>=0.2.17",
    "langsmith>=0.2.0",
    "modal>=0.73.0",
]

[project.scripts]
tabor = "main:cli"
